Closed Bug 387142 Opened 18 years ago Closed 18 years ago

regressed like bug 295223 (Bookmark menu collapses when hovering folder in level 1, quickly marking another folder in level 1, and then hovering folder in level 2 (subfolder of first folder).)

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: masayuki, Assigned: enndeakin)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

The landing for bug 279703 is breaks the patch for bug 295223. The submenus are collapsed without the user's intention now. When the submenu items are hovered, they should cancel the collapsing timer. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007070604 Minefield/3.0a7pre
Flags: blocking1.9?
(In reply to comment #0) I can confirm that for my SM-Trunks on Vista since Build 2007070405
Attached patch work in progress (obsolete) — Splinter Review
This patch cancels the timer properly. Still seeing an issue when a further layer of submenus is open so I'm going to investigate some more.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
This patch does two things when a menuitem is highlighted: - cancels the timer which would have closed up the popup the menu is in - rehighlights the menu in the parent
Attachment #271564 - Attachment is obsolete: true
Attachment #271694 - Flags: superreview?(bzbarsky)
Attachment #271694 - Flags: review?(bzbarsky)
Comment on attachment 271694 [details] [diff] [review] cancel timer properly >+ if (mCloseTimer && >+ NS_STATIC_CAST(nsIMenuParent *, mTimerMenu) == aMenuParent) { static_cast<>() ;-) Though can't the compiler cast this itself?
Comment on attachment 271694 [details] [diff] [review] cancel timer properly >Index: layout/xul/base/src/nsMenuFrame.cpp >+ // sibling before moving onto a item within the submenu, causing the "an item". >Index: layout/xul/base/src/nsXULPopupManager.cpp >+ NS_STATIC_CAST(nsIMenuParent *, mTimerMenu) == aMenuParent) { You shouldn't need the cast here. r+sr=bzbarsky with those changes.
Attachment #271694 - Flags: superreview?(bzbarsky)
Attachment #271694 - Flags: superreview+
Attachment #271694 - Flags: review?(bzbarsky)
Attachment #271694 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
-> v.
Status: RESOLVED → VERIFIED
I was hoping that this would fix bug 341157 (which was marked as a dupe of bug 41766) but apparently it doesn't. What I described there sounds pretty close to what is/was going on here (involuntary collapse of submenus) and makes the navigation of menus rather annoying.
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.menus → xptoolkit.widgets
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: