Bug 387142, submenus collapsing incorrectly, also ensure parent menu gets highlighted again when a subitem is selected, r+sr=bz  CVS: ----------------------------------------------------------------------