layout/xul/base/public/nsXULPopupManager.h
@@ -501,6 +501,16 @@ public:
   void KillMenuTimer();
 
   /**
+   * Cancel the timer which closes menus after delay, but only if the menu to
+   * close is aMenuParent. When a submenu is opened, the user might move the
+   * mouse over a sibling menuitem which would normally close the menu. This
+   * menu is closed via a timer. However, if the user moves the mouse over the
+   * submenu before the timer fires, we should instead cancel the timer. This
+   * ensures that the user can move the mouse diagonally over a menu.
+   */
+  void CancelMenuTimer(nsIMenuParent* aMenuParent);
+
+  /**
    * Handles navigation for menu accelkeys. Returns true if the key has
    * been handled.
    */
